--- a/fe/index.html
+++ b/fe/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>qm</title>
+    <style>
+      body { background-color: rgb(246, 247, 248); }
+    </style>
   </head>
   <body>
     <div id="root"></div>
